// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameSearchResult Presentational 테스트 검색하기전 1`] = `
<div>
  <div
    class="mainBlock"
    data-testid="start"
  >
    <p
      class="ectStatus"
    >
      원하는 장소를 검색해보세요
    </p>
  </div>
</div>
`;

exports[`NameSearchResult Presentational 테스트 로딩중 1`] = `
<div>
  <div
    class="mainBlock"
    data-testid="loading"
  >
    <div
      class="loading"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="loading"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
  </div>
</div>
`;

exports[`NameSearchResult Presentational 테스트 에러발생 1`] = `
<div>
  <div
    class="mainBlock"
    data-testid="error"
  >
    <p
      class="ectStatus"
    >
      에러가 발생하였습니다
    </p>
  </div>
</div>
`;

exports[`NameSearchResult Presentational 테스트 컨텐츠 없음 1`] = `
<div>
  <div
    class="mainBlock"
    data-testid="noResult"
  >
    <p
      class="ectStatus"
    >
      검색결과가 없습니다
    </p>
  </div>
</div>
`;

exports[`NameSearchResult Presentational 테스트 컨텐츠 있음 1`] = `
<div>
  <div
    class="mainBlock"
    data-testid="result"
  >
    <div
      class="storeinfo"
    >
      <div
        class="titlebox"
      >
        <h3
          class="name"
        >
          testName
        </h3>
        <p
          class="category"
        >
          testCategory
        </p>
      </div>
      <p
        class="adress"
      >
        0.001
        km
      </p>
      <ul
        class="taglist"
      >
        <li
          class="tag"
        >
          #
          testHashtag  1
        </li>
      </ul>
    </div>
  </div>
</div>
`;
